# PPTReviewer

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  PROGRESS.md  README.md  data_provider.py  diagnose_templates.py  example_usage.py  main.py  main_generator.py  ppt_engine.py  ppt_operations.py  ppt_schemas.py  pyproject.toml  slide_renderers.py  test_all_templates.py  test_mass_production.py  test_multi_datasource.py  test_new_system.py  test_new_system2.py  test_ppt_operations.py  test_refactor.py  test_single.py  test_yaml_export.py  test_yamlinput.py
.gemini/: styleguide.md
agent/: __init__.py  client.py  image_utils.py  json_utils.py  pipeline.py  react_agent.py  run_single.py  tools_local.py
benchmarking/: BENCHMARK_SYSTEM_OVERVIEW.md  FEEDBACK_AGENT_METHOD.md  FEEDBACK_BENCHMARK_DESIGN.md  FINE_GRAINED_ERROR_INJECTION_TODO.md  __init__.py
common/: __init__.py  function_specs.py
config/: __init__.py  constants.py  settings.py
core/: __init__.py  conclusion_generator.py  context.py  context_builder.py  dao.py  data_provider.py  database.py  layout_manager.py  ppt_operations.py  ppt_schemas.py  resources.py  schemas.py  style_manager.py  transformers.py
data_manager/: context.py
docs/: BENCHMARK_STATUS_SUMMARY_2026-05-11.md  agent_modes_comparison.md
engine/: __init__.py  builder.py  data_files.py  ppt_engine.py  slide_renderers.py  summary_injector.py  yaml_exporter.py  yaml_importer.py
eval/: run_small_eval.py
method/: __init__.py  database.py  schemas.py  transformers.py
rendering/: slide_renderers.py
scripts/: README.md  (+14 more)
(+111 files in other folders)
