[project]
name = "python-template"
version = "0.1.0"
description = "Python 项目初始化模版"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-pptx>=0.6.21",
    "pandas>=1.3.0",
    "pptx-ea-font>=0.0.4",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.8.2",
    "pre-commit>=4.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle (error)
    "F", # pyflakes
    "B", # bugbear
    "S",
    "C4", # flake8-comprehensions
    "SIM", # flake8-simplify
    "I", # isort
    "UP", # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
]
ignore = [
    "E501" # line-too-long
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"

branch_pattern = "^(feature|bugfix|hotfix)/.+"
branch_message = "Branch name '{{branch}}' does not follow the pattern '^(feature|bugfix|hotfix)/.+'"
